# data-derby-weather-forecaster-serving

./: .gitignore  Home.py  app.py  launch.py  pyproject.toml  visualize.py
model/: config.json
models/26_1000_epochs_americas/checkpoints/checkpoint-1000/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/26_1000_epochs_americas/checkpoints/checkpoint-1500/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/26_1000_epochs_americas/checkpoints/checkpoint-2000/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/26_1000_epochs_americas/checkpoints/checkpoint-2500/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/26_1000_epochs_americas/checkpoints/checkpoint-3000/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/26_1000_epochs_americas/checkpoints/checkpoint-3500/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/26_1000_epochs_americas/checkpoints/checkpoint-4000/: config.json  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/26_1000_epochs_americas/checkpoints/checkpoint-4500/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/26_1000_epochs_americas/checkpoints/checkpoint-500/: optimizer.pt  scheduler.pt  trainer_state.json
models/26_1000_epochs_americas/checkpoints/checkpoint-5000/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
models/26_100_epochs_americas/checkpoints/checkpoint-1000/: optimizer.pt  scheduler.pt  trainer_state.json
pages/: Demo.py
(+19 files in other folders)
