[tool.poetry]
name = "weather-forecaster-serving"
version = "0.1.0"
description = ""
authors = ["Gerred Dillon <hello@gerred.org>"]
readme = "README.md"
packages = [{include = "weather_forecaster_serving"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.21.0"
streamlit-globe = "^0.2.1"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
