[tool.poetry]
name = "weather-forecaster-serving"
version = "0.1.0"
description = ""
authors = ["Gerred Dillon <hello@gerred.org>"]
readme = "README.md"
packages = [{include = "weather_forecaster_serving"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.21.0"
streamlit-globe = "^0.2.1"
watchdog = "^3.0.0"
torch = "^2.0.0"
datasets = "^2.11.0"
transformers = "^4.28.1"
plotly = "^5.14.1"
google = "^3.0.0"
earthengine-api = "^0.1.351"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
